# dcad

./: CMakeLists.txt  ProjectData.h  README.md  cdsettings.cpp  cdsettings.h  cdsettings.ui  freqssettings.cpp  freqssettings.h  freqssettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitorsettings.cpp  monitorsettings.h  monitorsettings.ui  projectcreator.cpp  projectcreator.h  projectcreator.ui  res.qrc  tabtoolbar.json  unitssettings.cpp  unitssettings.h  unitssettings.ui
